--- a/src/ui/comment/RepliedTo.css
+++ b/src/ui/comment/RepliedTo.css
@@ -43,3 +43,21 @@
 .replied-to .unset:hover {
     background-color: var(--highlight);
 }
+
+.glance-comment-popover {
+    width: max-content;
+    max-height: 33vh;
+    overflow: auto;
+}
+
+@media only screen and (min-width: 992px) {
+    .glance-comment-popover {
+        max-width: calc(900px - 2rem);
+    }
+}
+
+@media only screen and (max-width: 991px) {
+    .glance-comment-popover {
+        max-width: calc(100vw - 4rem);
+    }
+}
