--- a/src/ui/posting/Entry.css
+++ b/src/ui/posting/Entry.css
@@ -24,8 +24,16 @@
     top: -1.5rem;
 }
 
-.entry .content IMG {
-    max-width: min(900px - 3.5rem, 100vw - 4rem);
+@media only screen and (min-width: 901px) {
+    .entry .content IMG {
+        max-width: calc(900px - 3.5rem);
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .entry .content IMG {
+        max-width: calc(100vw - 4rem);
+    }
 }
 
 .entry .emoji {
