Limit image size in postings and comments.

--- a/src/ui/posting/Posting.css
+++ b/src/ui/posting/Posting.css
@@ -7,6 +7,22 @@
     padding: 0.5rem;
 }
 
+@media only screen and (min-width: 901px) {
+    .posting .content IMG {
+        max-width: calc(900px - 3.5rem);
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .posting .content IMG {
+        max-width: calc(100vw - 4rem);
+    }
+}
+
+.posting.preview .content IMG {
+    max-height: 35rem;
+}
+
 .posting .reactions-line {
     display: flex;
     justify-content: space-between;
