--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -22,6 +22,22 @@
     margin-bottom: 0;
 }
 
+@media only screen and (min-width: 901px) {
+    .comment .content IMG {
+        max-width: calc(900px - 6.5rem);
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .comment .content IMG {
+        max-width: calc(100vw - 7rem);
+    }
+}
+
+.comment .content IMG {
+    max-height: 16rem;
+}
+
 .comment .chevron {
     visibility: hidden;
 }
