--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -17,6 +17,7 @@
     --correct-light: var(--green-light);
     --incorrect-light: var(--red-light);
     --node-name: #385898;
+    --node-name-ts: #389858;
     --blockquote: var(--highlight-cyan);
 
     --status-icon: rgba(255, 255, 255, .5);
