Do not scroll header of instants dropdown.

--- a/src/ui/instant/InstantStory.css
+++ b/src/ui/instant/InstantStory.css
@@ -5,7 +5,7 @@
 
 #instants .instant {
     display: block;
-    border-top: 1px solid #e8e8e8;
+    border-bottom: 1px solid #e8e8e8;
 }
 
 #instants .instant.unread {
