Make the whole "View later/earlier comments/Read more/Continue Reading" line clickable.

--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -43,6 +43,13 @@
     max-height: 16rem;
 }
 
+.comment .content .read-more {
+    width: 100%;
+    text-align: left;
+    padding-left: 0;
+    padding-top: 0;
+}
+
 .comment .chevron {
     visibility: hidden;
 }
