--- a/src/ui/posting/Entry.css
+++ b/src/ui/posting/Entry.css
@@ -3,6 +3,7 @@
     position: relative;
     background-color: var(--blockquote);
     border-radius: 0.5rem;
+    overflow: hidden;
 }
 
 .entry BLOCKQUOTE::before {
