--- a/src/ui/posting/Posting.css
+++ b/src/ui/posting/Posting.css
@@ -7,6 +7,10 @@
     padding: 0.5rem;
 }
 
+.posting > .content {
+    overflow-wrap: break-word;
+}
+
 @media only screen and (min-width: 901px) {
     .posting.preview > .content {
         max-height: 100vh;
