Make the end of non-viewed instants in the list of instants.

--- a/src/ui/instant/InstantsSentinel.css
+++ b/src/ui/instant/InstantsSentinel.css
@@ -1,7 +1,7 @@
 #instants .sentinel {
     text-align: center;
     color: var(--primary);
-    border-top: 1px solid #e8e8e8;
+    border-top: 1px solid var(--gray-ultralight);
     cursor: pointer;
 }
 
