--- a/src/ui/instant/InstantStory.css
+++ b/src/ui/instant/InstantStory.css
@@ -5,11 +5,15 @@
 
 #instants .instant {
     display: block;
-    border-bottom: 1px solid #e8e8e8;
+    border-bottom: 1px solid var(--gray-ultralight);
 }
 
 #instants .instant.unread {
     background-color: var(--highlight-cyan);
+}
+
+#instants .instant.last-new {
+    border-bottom: 1px solid var(--green);
 }
 
 #instants .instant .cursor {
