--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -34,7 +34,7 @@
         overflow-y: auto;
     }
 
-    .comment .content IMG {
+    .comment .content IMG, .comment .content IFRAME {
         max-width: calc(900px - 6.5rem);
     }
 }
@@ -45,12 +45,12 @@
         overflow-y: auto;
     }
 
-    .comment .content IMG {
+    .comment .content IMG, .comment .content IFRAME {
         max-width: calc(100vw - 7rem);
     }
 }
 
-.comment .content IMG {
+.comment .content IMG, .comment .content IFRAME {
     max-height: 16rem;
 }
 
