--- a/src/ui/posting/PostingButton.css
+++ b/src/ui/posting/PostingButton.css
@@ -20,4 +20,7 @@
     margin-left: 0.4rem;
     font-weight: 600;
     font-size: 1rem;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
