Make more space in the main menu on mobile for node owner name.

--- a/src/ui/mainmenu/logo/Logo.css
+++ b/src/ui/mainmenu/logo/Logo.css
@@ -1,5 +1,18 @@
 #logo {
     border-right: solid var(--status-icon) 1px;
-    margin-right: 1rem;
-    padding-right: 1rem;
+}
+
+@media only screen and (min-width: 576px) {
+    #logo {
+        margin-right: 1rem;
+        padding-right: 1rem;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    #logo {
+        margin-left: -.5rem;
+        margin-right: .5rem;
+        padding-right: .5rem;
+    }
 }
