Show "Sign Up" button in every place where "Connect" button appears.

--- a/src/ui/mainmenu/connections/Connections.css
+++ b/src/ui/mainmenu/connections/Connections.css
@@ -42,6 +42,10 @@
     padding: 0.5em;
 }
 
+#connections .connection-sign-up {
+    text-align: right;
+}
+
 #connections .connection-add:hover {
     background-color: var(--highlight);
 }
