Put all reactions icons into the webapp package and import them as React components.

--- a/src/ui/control/EmojiSelector.css
+++ b/src/ui/control/EmojiSelector.css
@@ -12,6 +12,10 @@
     vertical-align: baseline;
 }
 
+.emoji-selector .choice .twemoji {
+    vertical-align: baseline;
+}
+
 .emoji-selector .choice .svg-inline--fa {
     vertical-align: .125em;
 }
