Display emojis as transparent text with background image, to support copying text with emojis.

--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -12,8 +12,8 @@ ABBR[title] {
 }
 
 .emoji {
-    width: 1em;
-    height: 1em;
+    background-repeat: no-repeat;
+    color: transparent;
 }
 
 .container {
