Get application key and ask for Web Push subscription.

--- a/src/ui/instant/Instants.css
+++ b/src/ui/instant/Instants.css
@@ -19,7 +19,7 @@
     font-weight: bold;
 }
 
-#instants .footer {
+#instants > .footer {
     padding-top: .25rem;
     padding-left: .75rem;
     padding-right: .75rem;
