--- a/src/ui/instant/Instants.css
+++ b/src/ui/instant/Instants.css
@@ -23,6 +23,7 @@
     padding-top: .25rem;
     padding-left: .75rem;
     padding-right: .75rem;
+    margin-bottom: -.25rem;
     border-top: 1px solid var(--gray-light);
     display: flex;
 }
