Link to the catalog of blogs on the Welcome page.

--- a/src/ui/welcome/WelcomePage.css
+++ b/src/ui/welcome/WelcomePage.css
@@ -5,3 +5,15 @@
     text-align: center;
     margin-top: 4rem;
 }
+
+.welcome .discover {
+    text-align: center;
+    margin-top: .7rem;
+}
+
+.welcome .discover A {
+    padding-left: 2em;
+    padding-right: 1.5em;
+    position: relative;
+    left: -3rem;
+}
