--- a/src/ui/feed/FeedPage.css
+++ b/src/ui/feed/FeedPage.css
@@ -5,6 +5,12 @@
     margin-top: 5rem;
 }
 
+@media only screen and (max-width: 575px) {
+    .no-postings {
+        text-align: center;
+    }
+}
+
 .feed-end {
     text-align: center;
     font-size: x-large;
