Make all emojis equal in width regardless of the width of the hidden text.

--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -14,6 +14,8 @@ ABBR[title] {
 .emoji {
     background-repeat: no-repeat;
     color: transparent;
+    display: inline-block;
+    min-width: 1.3em;
 }
 
 .container {
