Drop "latest" and "deadline" from name info. Always show name generation, if it is not 0.

--- a/src/ui/mainmenu/connections/HomeName.css
+++ b/src/ui/mainmenu/connections/HomeName.css
@@ -7,6 +7,12 @@
     cursor: pointer;
 }
 
+#connection-status .home-name .generation {
+    font-size: 60%;
+    position: relative;
+    bottom: -0.25em;
+}
+
 #connection-status .active .home-name {
     color: white;
 }
