More user-friendly design and behaviour of Reset button in the composer.

--- a/src/ui/compose/ComposePage.css
+++ b/src/ui/compose/ComposePage.css
@@ -38,15 +38,15 @@
     }
 }
 
+.reset-button {
+    flex: none;
+    margin-right: .25rem;
+}
+
 .form-buttons {
     display: flex;
 }
 
 .submit-button {
     flex: auto;
-}
-
-.reset-button {
-    flex: none;
-    margin-left: 0.5rem;
 }
