--- a/src/ui/feed/FeedPageHeader.css
+++ b/src/ui/feed/FeedPageHeader.css
@@ -5,12 +5,12 @@
     justify-content: space-between;
     flex-wrap: wrap;
     background-color: var(--body-background);
-    padding-top: 0.5rem;
-    padding-left: 4px;
-    padding-right: 4px;
-    margin-bottom: 0.5rem;
-    margin-left: -4px;
-    margin-right: -4px;
+    padding-top: .5rem;
+    padding-left: .25rem;
+    padding-right: .25rem;
+    margin-bottom: .5rem;
+    margin-left: -.25rem;
+    margin-right: -.25rem;
     z-index: 1010;
 }
 
@@ -19,5 +19,7 @@
 }
 
 #feed-header.feed-header-shadow {
-    box-shadow: 0 10px 5px -3px var(--gray-light);
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14),
+                0 1px 10px 0 rgba(0, 0, 0, .12),
+                0 2px 4px -1px rgba(0, 0, 0, .2)
 }
