Large title for feeds with the full name of the owner.

--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -9,6 +9,7 @@
     --gray-medium: #a9a9a9;
     --gray-light: #ced4da;
     --gray-ultralight: #e8e8e8;
+    --white-dark: #fafafa;
     --green-light: #42d042; /* forest green + 20% lighter */
     --red-light: #df5a5a; /* fire brick + 20% lighter */
 
