--- a/src/ui/feed/FeedPageHeader.css
+++ b/src/ui/feed/FeedPageHeader.css
@@ -1,25 +1,25 @@
 #feed-header {
     position: sticky;
     top: 2.7rem;
+    background-color: white;
+    padding-top: .5rem;
+    margin-bottom: .5rem;
+    z-index: 1010;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14),
+                0 1px 10px 0 rgba(0, 0, 0, .12),
+                0 2px 4px -1px rgba(0, 0, 0, .2)
+}
+
+#feed-header .panel {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background-color: var(--body-background);
-    padding-top: .5rem;
-    padding-left: .25rem;
+    max-width: 900px;
     padding-right: .25rem;
-    margin-bottom: .5rem;
-    margin-left: -.25rem;
-    margin-right: -.25rem;
-    z-index: 1010;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #feed-header H2 {
     margin-left: 0.3em;
-}
-
-#feed-header.feed-header-shadow {
-    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14),
-                0 1px 10px 0 rgba(0, 0, 0, .12),
-                0 2px 4px -1px rgba(0, 0, 0, .2)
 }
