Always show comment menu on touch screens. Use CSS media query instead of "touch" class for showing draft deletion button.

--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -62,12 +62,14 @@
     padding-top: 0;
 }
 
-.comment .chevron {
-    visibility: hidden;
-}
+@media (any-hover: hover) {
+    .comment .chevron {
+        visibility: hidden;
+    }
 
-.comment:hover .chevron {
-    visibility: visible;
+    .comment:hover .chevron {
+        visibility: visible;
+    }
 }
 
 .comment .reactions-line {
