--- a/src/ui/posting/Posting.css
+++ b/src/ui/posting/Posting.css
@@ -7,6 +7,14 @@
     padding: 0.5rem;
 }
 
+@media only screen and (max-width: 575px) {
+    .posting {
+        border-left-width: 0;
+        border-right-width: 0;
+        border-radius: 0;
+    }
+}
+
 .posting > .content {
     overflow-wrap: break-word;
     text-align: start;
