--- a/src/ui/profile/edit/ProfileEditor.css
+++ b/src/ui/profile/edit/ProfileEditor.css
@@ -6,6 +6,14 @@
     margin-top: 1rem;
 }
 
+@media only screen and (max-width: 575px) {
+    .profile-editor {
+        border-left-width: 0;
+        border-right-width: 0;
+        border-radius: 0;
+    }
+}
+
 .profile-editor-footer {
     text-align: right;
 }
