--- a/src/ui/profile/view/ProfileView.css
+++ b/src/ui/profile/view/ProfileView.css
@@ -5,3 +5,11 @@
     padding: 1rem;
     margin-top: 1rem;
 }
+
+@media only screen and (max-width: 575px) {
+    .profile-view {
+        border-left-width: 0;
+        border-right-width: 0;
+        border-radius: 0;
+    }
+}
