--- a/src/ui/feed/FeedTopButton.css
+++ b/src/ui/feed/FeedTopButton.css
@@ -25,8 +25,9 @@
     display: inline-block;
     padding: 0.2rem 0.7rem;
     border-radius: 1em;
-    box-shadow: 3px 3px 2px #ddd;
-    border: 1px solid #cccccc;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14),
+                0 1px 10px 0 rgba(0, 0, 0, .12),
+                0 2px 4px -1px rgba(0, 0, 0, .2);
     cursor: pointer;
     font-size: .875rem;
     font-weight: 400;
