Fix strange effect of disappearing menu in Firefox.

--- a/src/ui/feed/FeedTitle.css
+++ b/src/ui/feed/FeedTitle.css
@@ -4,7 +4,7 @@
 }
 
 .feed-title .panel {
-    width: min(900px, 100vw);
+    width: min(900px, 100%);
     margin-left: auto;
     margin-right: auto;
 }
