--- a/src/ui/feed/FeedPageHeader.css
+++ b/src/ui/feed/FeedPageHeader.css
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    max-width: 900px;
+    max-width: var(--feed-width);
     padding-right: .25rem;
     margin-left: auto;
     margin-right: auto;
