--- a/src/ui/feed/FeedTitle.css
+++ b/src/ui/feed/FeedTitle.css
@@ -4,7 +4,7 @@
 }
 
 .feed-title .panel {
-    width: min(900px, 100%);
+    width: min(var(--feed-width), 100%);
     margin-left: auto;
     margin-right: auto;
     line-height: 1.2;
